--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    gap: 0.8rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
